# orthant

./: .gitignore  .pre-commit-config.yaml  README.md  changelog.md  conftest.py  main.py  mkdocs.yaml  orthant-logging.yaml  orthant.yaml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md
